--- a/Test 1 - High Scores Easy CSS.css
+++ b/Test 1 - High Scores Easy CSS.css
@@ -14,6 +14,21 @@ body{
 		font-size: 15px;
 }
 
+#easy {
+	background-color: #00FFFF;
+	border: 5px solid #000000;
+        font-size: 40px;
+}
+
+#medium {
+	background-color: #FFFF33;
+}
+
+#hard {
+	background-color: #FF0000;
+}
+
+
 button{
         height: 100px;
         width: 300px;
@@ -30,11 +45,6 @@ button{
         font-size: 30px;
         font-family: Lucida Console;
 }
-    
-button:hover{
-        border: 5px solid #000000;
-        font-size: 40px;
-    }
     
 .headers{
         text-align: center;
@@ -56,7 +66,7 @@ button:hover{
 }
 
 #scoreArea {
-		background-color: #000000;
+		background-color: #00FFFF;
 		height: 800px;
 		width: 900px;
 		float: left;
