--- a/Test 1 - Settings CSS.css
+++ b/Test 1 - Settings CSS.css
@@ -6,11 +6,12 @@ body{
     background-color: #8B4513;
 }
     
-#settings{
-    height: 50px;
-    width: 50px;
-    float: right; 
-    border: 2px dashed #000000;
+#returnHome{
+	height:50px;
+	width:50px;
+	float: left; 
+	border: 2px solid #000000;
+	font-size: 15px;
 }
 
 button{
