--- a/Test 1 - High Scores Easy CSS.css
+++ b/Test 1 - High Scores Easy CSS.css
@@ -1,23 +1,23 @@
 div{
-        text-align: center;
+	text-align: center;
 }
 
 body{
-        background-color: #8B4513;
+	background-color: #8B4513;
 }
-    
+	
 #returnHome{
-		height: 50px;
-		width: 50px;
-		float: left; 
-		border: 2px solid #000000;
-		font-size: 15px;
+	height: 50px;
+	width: 50px;
+	float: left; 
+	border: 2px solid #000000;
+	font-size: 15px;
 }
 
 #easy {
 	background-color: #00FFFF;
 	border: 5px solid #000000;
-        font-size: 40px;
+	font-size: 40px;
 }
 
 #medium {
@@ -30,44 +30,53 @@ body{
 
 
 button{
-        height: 100px;
-        width: 300px;
-        /*border-radius: 5px;*/
-        background-color: #32CD32;
-        /*margin:auto;*/
-        /*margin-top:10px;
-        margin-bottom: 10px;*/
-		/*float: left;*/
-        display: block;
-        border: 2px solid #000000;
-		border-top: 1px solid #000000;
-		border-bottom: 1px solid #000000;
-        font-size: 30px;
-        font-family: Lucida Console;
+	height: 100px;
+	width: 300px;
+	background-color: #32CD32;
+	display: block;
+	border: 2px solid #000000;
+	border-top: 1px solid #000000;
+	border-bottom: 1px solid #000000;
+	font-size: 30px;
+	font-family: Lucida Console;
 }
     
 .headers{
-        text-align: center;
-        font-family: Lucida Console;
-        font-size: 30px;
-        clear:both;
-        font-weight:bold;
+	text-align: center;
+	font-family: Lucida Console;
+	font-size: 30px;
+	clear:both;
+	font-weight:bold;
 }
 
 #title{
-    font-size: 50px;
+	font-size: 50px;
 }
 
 #scoreType {
-		background-color: #8B4513;
-		height: 800px;
-		width: 298px;
-		float: left;
+	background-color: #8B4513;
+	height: 800px;
+	width: 298px;
+	float: left;
 }
 
-#scoreArea {
-		background-color: #00FFFF;
-		height: 800px;
-		width: 900px;
-		float: left;
+#easyScores {
+	background-color: #00FFFF;
+	height: 800px;
+	width: 900px;
+	float: left;
+}
+
+#mediumScores {
+	background-color: #FFFF33;
+	height: 800px;
+	width: 900px;
+	float: left;
+}
+
+#hardScores {
+	background-color: #FF0000;
+	height: 800px;
+	width: 900px;
+	float: left;
 }
