--- a/Test 1 - Settings CSS.css
+++ b/Test 1 - Settings CSS.css
@@ -49,14 +49,14 @@ body{
 	font-size: 15px;
 }
 
-#english {
+#lang1 {
 	height:50px;
 	width:75px;
 	border: 2px solid #000000;
 	font-size: 15px;
 }
 
-#french {
+#lang2{
 	height:50px;
 	width:75px;
 	border: 2px solid #000000;
@@ -77,7 +77,7 @@ button{
     font-size: 30px;
     font-family: Lucida Console;
 }
-    
+
 button:hover{
     border: 5px solid #000000;
     font-size: 40px;
