--- a/Test 1 - Tutorial.css
+++ b/Test 1 - Tutorial.css
@@ -26,15 +26,35 @@ button {
 
 button {
 	border: 2px solid #000000;
+	font-size: 10px;
+	margin: auto;
 }
 
 #monkey {
 	height: 50px;
 	width: 50px;
 	background-color: #8B4513;
-	font-size: 10px;
-	margin: auto;
 	margin-top: 150px;
 	margin-left: 325px;
 	position: absolute;
+}
+
+#gameInfo {
+	background-color: #00FFFF;
+	text-align: left;
+	width: 145px;
+	height: 100px;
+	margin-left: 555px;
+	border: 2px solid #000000;
+}
+
+#numbers {
+	background-color: #888888;
+	text-align: left;
+	width: 120px;
+	height: 200px;
+	margin-left: 575px;
+	margin-top: 90px;
+	border: 2px solid #000000;
+}
 }
