--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -106,9 +106,11 @@ button:hover{
 }
 
 #monkey {
+	position: fixed;
 	height: 200px;
 	width: 90px;
-	/*animation: slidein 3s;
+	/*margin-right: 0px;
+	animation: slidein 3s;
 	@-webkit-keyframes slidein {
 		from {
 			margin-left: 50%;
@@ -122,7 +124,7 @@ button:hover{
 	position: fixed;
 	height: 200px;
 	width: 90px;
-	margin-right: 0px;
+	margin-left: 0px;
 	/*animation: slidein 3s;
 	@-webkit-keyframes slidein {
 		from {
