--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -106,10 +106,11 @@ button:hover{
 }
 
 #monkey {
+	display: block;
 	position: fixed;
 	height: 200px;
 	width: 90px;
-	margin-left: 700px;
+	margin-left: 400px;
 	/*margin-right: 0px;
 	animation: slidein 3s;
 	@-webkit-keyframes slidein {
