--- a/css/settings.css
+++ b/css/settings.css
@@ -59,7 +59,7 @@ body{
 #lang2{
 	height:50px;
 	width:75px;
-	border: 2px solid #000000;
+	border: 2px solid #FF3300;
 	font-size: 15px;
 }
 
@@ -90,7 +90,7 @@ button:hover{
     font-size: 40px;
     }
     
-.headers{
+#headers{
     text-align: center;
     font-family: Lucida Console;
     font-size: 30px;
