--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -11,7 +11,7 @@ div{
 
 body{
     background-color: #8B4513;
-	background-image:url(../images/menuImage.jpg);
+	background-image:url(../images/titlePage.png);
 	/*background-size: 1300px 900px;*/
 	background-size: 100%;
 }
@@ -37,7 +37,7 @@ button{
     /*height: 90px;
     width: 250px;*/
 	
-	height: 10%;
+	height: 8%;
 	width: 17%;
 	
 	
@@ -58,7 +58,7 @@ button{
 	margin-left: 435px;*/
 	
 	margin-left: 34%;
-	margin-top: 41%;
+	margin-top: 40%;
 	
 	background: transparent;
 	border: none;
@@ -69,7 +69,7 @@ button{
 	margin-left: 435px;*/
 	
 	margin-left: 34%;
-	margin-top: 51%;
+	margin-top: 50%;
 	
 	
 	background: transparent;
@@ -80,7 +80,9 @@ button{
 	/*margin-top: 690px;*/
 	/*margin-left: 435px;*/
 	margin-left: 34%;
-	margin-top: 61%;
+	margin-top: 60%;
+	background: transparent;
+	border: none;
 }
     
 button:hover{
