--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -8,6 +8,11 @@ div{
 	border: 2px solid #000000;
 }
 
+#mainBackground {
+	background-image:url(../images/background.png);
+	background-size: 100%;
+}
+
 body{
     background-color: #8B4513;
 }
@@ -27,21 +32,24 @@ button {
 }
 
 #monkey {
-	height: 50px;
-	width: 50px;
+	height: 100px;
+	width: 75px;
 	background-color: #8B4513;
+	background-image:url(../images/monkey.png);
+	background-size: 100%;
 	margin-top: 150px;
 	margin-left: 260px;
 	position: absolute;
 	display: block;
 	font-size: 10px;
+	border: none;
 }
 
 #vine1 {
 	height: 300px;
 	width: 7px;
 	background-color: #006600;
-	margin-left: 308px;
+	margin-left: 253px;
 	position: absolute;
 }
 
@@ -49,11 +57,14 @@ button {
 	height: 30px;
 	width: 30px;
 	background-color: #FFFF00;
+	background-image:url(../images/banana.png);
+	background-size: 100%;
 	margin-top: 125px;
 	margin-left: 385px;
 	position: absolute;
 	display: block;
 	font-size: 10px;
+	border: none;
 }
 
 #vine2 {
@@ -82,25 +93,28 @@ button {
 	position: absolute;
 }
 
-#calculator {
-	background-color: #888888;
-	text-align: left;
-	width: 120px;
-	height: 200px;
-	margin-left: 575px;
-	margin-top: 90px;
-	position: absolute;
-}
-
 #calculatorScreen {
 	background-color: #E8E8E8;
 	text-align: left;
-	width: 100px;
+	width: 120px;
 	height: 20px;
-	margin-left: 10px;
-	margin-top: 10px;
+	margin-left: 575px;
+	margin-top: 135px;
 	position: absolute;
 }
+	
+#calculator {
+	background-color: #888888;
+	background-image:url(../images/calculator.png);
+	background-size: 100%;
+	text-align: left;
+	width: 120px;
+	height: 135px;
+	margin-left: 575px;
+	margin-top: 155px;
+	position: absolute;
+}
+
 .number {
 	width: 40px;
 	height: 40px;
