--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -58,7 +58,7 @@ button{
 	margin-left: 435px;*/
 	
 	margin-left: 34%;
-	margin-top: 40%;
+	margin-top: 41%;
 	
 	background: transparent;
 	border: none;
@@ -112,7 +112,7 @@ button:hover{
 	position: fixed;
 	height: 200px;
 	width: 90px;
-	margin-left: 809px;
+	margin-left: 90%;
 	/*margin-right: 0px;
 	animation: slidein 3s;
 	@-webkit-keyframes slidein {
