--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -3,17 +3,20 @@ div{
 	width: 100%;
 }
 
-/*#divBack {
-	background-image:url(menuImage.jpg);
-	width: 100%;
-	height: auto;
-}*/
+#divBack {
+	background-image:url(../images/titlePage.png);
+	background-size: 1024px 600px;
+	width: 1024px;
+	height: 600px;
+	
+	/*background-size: 100%;*/
+}
 
 body{
     background-color: #8B4513;
-	background-image:url(../images/titlePage.png);
-	/*background-size: 1300px 900px;*/
-	background-size: 100%;
+	/*background-image:url(../images/titlePage.png);*/
+	/*background-size: 1300px 900px;
+	background-size: 100%;*/
 }
 
 #companyLogo{
@@ -54,33 +57,30 @@ button{
 }
 
 #startButton{
-	/*margin-top: 490px;
-	margin-left: 435px;*/
+	margin-top: 330px;
+	margin-left: 350px;
 	
-	margin-left: 34%;
-	margin-top: 41%;
-	
+	/*margin-left: 34%;
+	margin-top: 41%;*/
 	background: transparent;
 	border: none;
 }
 
 #tutorialButton{
-	/*margin-top: 590px;
-	margin-left: 435px;*/
+	margin-top: 395px;
+	margin-left: 350px;
 	
-	margin-left: 34%;
-	margin-top: 50%;
-	
-	
+	/*margin-left: 34%;
+	margin-top: 50%;*/
 	background: transparent;
 	border: none;
 }
 
 #highScoresButton{
-	/*margin-top: 690px;*/
-	/*margin-left: 435px;*/
-	margin-left: 34%;
-	margin-top: 60%;
+	margin-top: 470px;
+	margin-left: 350px;
+	/*margin-left: 34%;
+	margin-top: 60%;*/
 	background: transparent;
 	border: none;
 }
@@ -112,8 +112,9 @@ button:hover{
 	position: fixed;
 	height: 200px;
 	width: 90px;
-	margin-left: 90%;
-	/*margin-right: 0px;
+	margin-left: 900px;
+	/*margin-left: 90%;
+	margin-right: 0px;
 	animation: slidein 3s;
 	@-webkit-keyframes slidein {
 		from {
