--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -14,6 +14,8 @@ div{
 
 body{
     background-color: #8B4513;
+	height: 600px;
+	width: 1024px;
 	/*background-image:url(../images/titlePage.png);*/
 	/*background-size: 1300px 900px;
 	background-size: 100%;*/
