--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -7,6 +7,16 @@ div{
 	display: block;
 	border: 2px solid #000000;
 }
+body{
+	height: 600px;
+	width: 1024px;
+}
+
+#back{
+	height: 600px;
+	width: 1024px;
+	margin: none;
+}
 
 #mainBackground {
 	background-image:url(../images/background.png);
