--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -42,8 +42,8 @@ button{
     /*height: 90px;
     width: 250px;*/
 	
-	height: 8%;
-	width: 17%;
+	height: 50px;
+	width: 200px;
 	
 	
     border-radius: 5px;
