--- a/css/testStart.css
+++ b/css/testStart.css
@@ -44,6 +44,7 @@ button{
         /*border: 2px solid #000000;*/
         font-size: 28px;
         font-family: Lucida Console;
+		border: none;
 		/*background-color: #32CD32;*/
 		background: transparent;
 		
