--- a/css/mainMenu.css
+++ b/css/mainMenu.css
@@ -13,7 +13,7 @@ div{
 }
 
 #credit{
-	margin-top: 550px;
+	margin-top: 515px;
 	margin-left: 810px;
 	height: 20px;
 	width: 200px;
@@ -25,38 +25,29 @@ body{
     background-color: #8B4513;
 	height: 600px;
 	width: 1024px;
-	/*background-image:url(../images/titlePage.png);*/
-	/*background-size: 1300px 900px;
-	background-size: 100%;*/
 }
 
 #companyLogo{
-	/*display: none;*/
-	/*margin: auto;*/
 	text-align: auto;
 	height: 1000px;
 	width: 1000px;
 }
     
 #settings{
-	position: fixed;
-    height: 50px;
-    width: 50px;
-    float: right; 
-    border: 2px dashed #000000;
-	/*display:none;*/
+    position: fixed;
+    background-size: 75px 75px;
+    background-image:url(../images/settingsIcon.png);
+    height: 80px;
+    width: 80px;
+    float: right;
+    margin-left:10px;
+    border: 2px solid #000000;
 }
 
 button{
-    /*height: 90px;
-    width: 250px;*/
-	
-	height: 50px;
-	width: 200px;
-	
-	
+    height: 50px;
+    width: 200px;
     border-radius: 5px;
-    background-color: #32CD32;
     /*margin:auto;*/
     margin-top:10px;
     margin-bottom: 10px;
@@ -64,7 +55,7 @@ button{
    /* border: 2px solid #000000;*/
     font-size: 18px;
     font-family: Lucida Console;
-	position: fixed;
+    position: fixed;
 }
 
 #startButton{
@@ -75,6 +66,7 @@ button{
 	margin-top: 41%;*/
 	background: transparent;
 	border: none;
+        outline:none;
 }
 
 #tutorialButton{
@@ -85,6 +77,7 @@ button{
 	margin-top: 50%;*/
 	background: transparent;
 	border: none;
+        outline:none;
 }
 
 #highScoresButton{
@@ -94,12 +87,8 @@ button{
 	margin-top: 60%;*/
 	background: transparent;
 	border: none;
+        outline:none;
 }
-    
-/*button:hover{
-    border: 5px solid #000000;
-    font-size: 40px;
-    }*/
     
 .headers{
     text-align: center;
@@ -139,11 +128,11 @@ button{
 
 
 #easterEgg{
-    margin-top: 360px;
+    margin-top: 450px;
     margin-left: 40px;
     position: fixed;
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     float: left; 
     background: transparent;
     border: none;
