--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -1,200 +1,37 @@
-div{
-    text-align: center;
-/*	background-color: #32CD32;*/
-	margin: auto;
-	height: 399px;
-	width: 700px;
-	display: block;
-	border: 2px solid #000000;
-}
 body{
 	height: 600px;
 	width: 1024px;
-}
-
-#back{
-	height: 600px;
-	width: 1024px;
-	margin: none;
-}
-
-#mainBackground {
-	background-image:url(../images/background.png);
-	background-size: 100%;
-	margin: none;
-	margin-right: 0px;
-}
-
-body{
-    background-color: #8B4513;
+        background-color: #8B4513;
 }
 
 #returnHome{
-    height: 403px;
-    width: 320px;
+    height: 454px;
+    width: 300px;
     float: left; 
     border: 2px solid #000000;
-	background-color: #32CD32;
-	display: block;
-	font-size: 30px;
+    background-color: #32CD32;
+    font-size: 50px;
+    position:fixed;
+    margin-top:0px;
+    float:top;
 }
 
 #gameInstructions{
-	width: 1022px;
-	height: 199px;
-	font-size: 25px;
-	font-family: Lucida Console;
-	background-color: #CCFFFF;
+    width: 1024px;
+    height: 146px;
+    font-size: 20px;
+    font-family: Lucida Console;
+    background-color: #CCFFFF;  
+    text-align:center;
+    margin-top:-6px;
+    border: 2px solid #000000;
+    float:bottom;
 }
 
-button {
-	border: 2px solid #000000;
-	margin: auto;
-}
-
-#monkey {
-	height: 100px;
-	width: 75px;
-	background-color: transparent;
-	background-image:url(../images/monkeyClear.png);
-	background-size: 100%;
-	margin-top: 150px;
-	margin-left: 260px;
-	position: absolute;
-	display: block;
-	font-size: 10px;
-	border: none;
-}
-
-#vine1 {
-	height: 300px;
-	width: 7px;
-	background-color: #006600;
-	margin-left: 253px;
-	position: absolute;
-}
-
-#banana {
-	height: 30px;
-	width: 30px;
-	
-	background-image:url(../images/bananaClear.png);
-	background-size: 100%;
-	margin-top: 125px;
-	margin-left: 385px;
-	position: absolute;
-	display: block;
-	font-size: 10px;
-	border: none;
-}
-
-#vine2 {
-	height: 300px;
-	width: 7px;
-	background-color: #006600;
-	margin-left: 500px;
-	position: absolute;
-}
-
-#gameInfo {
-	background-color: #00FFFF;
-	text-align: left;
-	width: 143px;
-	height: 100px;
-	margin-left: 553px;
-}
-
-#numberArea {
-	height: 40px;
-	width: 250px;
-	margin-top: 235px;
-	margin-left: 225px;
-	font-size: 30px;
-	background-color: #CCFFFF;
-	position: absolute;
-}
-
-#calculatorScreen {
-	background-color: #E8E8E8;
-	text-align: left;
-	width: 120px;
-	height: 20px;
-	margin-left: 575px;
-	margin-top: 135px;
-	position: absolute;
-}
-	
-#calculator {
-	background-color: #888888;
-	background-image:url(../images/calculator.png);
-	background-size: 100%;
-	text-align: left;
-	width: 120px;
-	height: 135px;
-	margin-left: 575px;
-	margin-top: 155px;
-	position: absolute;
-}
-
-.number {
-	width: 40px;
-	height: 40px;
-	position: absolute;
-	background-color: #C0C0C0;
-}
-
-#number1 {
-	margin-top: 40px;
-}
-
-#number2 {
-	margin-top: 40px;
-	margin-left: 40px;
-}
-
-#number3 {
-	margin-top: 40px;
-	margin-left: 80px;
-}
-
-#number4 {
-	margin-top: 80px;
-}
-
-#number5{
-	margin-top: 80px;
-	margin-left: 40px;
-}
-
-#number6 {
-	margin-top: 80px;
-	margin-left: 80px;
-}
-
-#number7 {
-	margin-top: 120px;
-}
-
-#number8{
-	margin-top: 120px;
-	margin-left: 40px;
-}
-
-#number9{
-	margin-top: 120px;
-	margin-left: 80px;
-}
-
-#placeHolder1 {
-	margin-top: 160px;
-}
-
-#number0{
-	margin-top: 160px;
-	margin-left: 40px;
-}
-
-#placeHolder2{
-	margin-top: 160px;
-	margin-left: 80px;
+#tutorialImage{
+    margin-left: 300px;
+    width:724px;
+    height:450px;
+    border: 2px solid #000000;
+    float:top;
 }
