--- a/css/highScores.css
+++ b/css/highScores.css
@@ -4,7 +4,7 @@ div{
 	height: 600px;
 }
 
-#back1{
+#buttonColumn{
 	width: 324px;
 	float: left;
 	height: 600px;
@@ -13,53 +13,44 @@ div{
 
 #table{
         background-image:url(../images/highscoreNew.png);
-	background-size: 100%;
+	background-size: 700px 600px;
 	border: 2px solid #000000;
+        height:600px;
+        width:700px;
         margin-left:324px;
+        position:absolute;
 }
 
 th{
-    padding:40px 0px 60px 0px;
+    padding:20px 0px 38px 0px;
     font-size: 30px;
     font-family: Lucida Console; 
 }
 
 #rank{
-    padding-left:40px;
-    padding-right:40px;
+    padding-left:20px;
+    padding-right:20px;
 }
 
 #name{
-    padding-left:110px;
-    padding-right:110px;
+    padding-left:60px;
+    padding-right:60px;
 }
 
 #score{
-    padding-left:85px;
-    padding-right:85px;
+    padding-left:45px;
+    padding-right:45px;
 }
 
 #date{
-    padding-left:95px;
-    padding-right:95px;
+    padding-left:55px;
+    padding-right:55px;
 }
 
 td{
-    padding:9px 0px 9px 0px;
+    padding:12px 0px 11px 0px;
     font-size: 25px;
     font-family: Lucida Console;
-}
-
-#name{
-    
-}
-
-#score{
-    
-}
-
-#date{
-    
 }
 
 button{
