--- a/css/logo.css
+++ b/css/logo.css
@@ -1,9 +1,8 @@
 #companyLogo {
-	/*display: none;*/
-	/*margin: auto;*/
 	text-align: auto;
-	width: 100%;
-	/*!--width: auto\9;-->*/
+	width: 1024px;
+	height: 600px;
+
 }
 
 body{
